--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/template/header.ejs %>
 <body>
       
-   
+   <h1>This is the index page</h1>
   
   
   <% include partials/template/scripts.ejs %>
