--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <% include partials/template/header.ejs %>
-<div class="row mt-5">
+<!-- <div class="row mt-5">
     <div class="col-md-6 m-auto">
         <div class="card card-body text-center">
             <h1><i class="fab fa-node-js fa-3x"></i></h1>
@@ -12,7 +12,7 @@
             </a>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <% include partials/template/scripts.ejs %>
