--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,25 +9,25 @@
             <!-- THIS FORM GOES TO USERS AND IT'S GOING TO BE A POST REQUEST 
             -->
             <form action="/register" method="POST">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="username"
-                    id="username"
-                    name="username"
-                    class="form-control"
-                    placeholder="Enter Username"
-                    value="<%= typeof name != 'undefined' ? name : '' %>">
-                </div>
               <div class="form-group">
-                <label for="name">Name</label>
+                <label for="fname">First Name</label>
                 <input
-                  type="name"
-                  id="name"
-                  name="name"
+                  type="fname"
+                  id="fname"
+                  name="fname"
                   class="form-control"
-                  placeholder="Enter Name"
-                  value="<%= typeof name != 'undefined' ? name : '' %>"
-                ><!--IF TYPE OF NAME DOES NOT EQUAL TO UNDEFINE THEN DISPLAY WHATEVER THE NAME VARIABLE IS -->
+                  placeholder="First Name"
+                  value="<%= typeof name != 'undefined' ? name : '' %>">
+                  <!--IF TYPE OF NAME DOES NOT EQUAL TO UNDEFINE THEN DISPLAY WHATEVER THE NAME VARIABLE IS -->
+              </div>
+              <div class="form-group">
+                <label for="lname">Last Name</label>
+                <input type="lname"
+                    id="lname"
+                    name="lname"
+                    class="form-control"
+                    placeholder="Last Name"
+                    value="<%= typeof name != 'undefined' ? name : '' %>">
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
@@ -40,6 +40,16 @@
                   value="<%= typeof email != 'undefined' ? email : '' %>"
                 >
               </div>
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="username"
+                    id="username"
+                    name="username"
+                    class="form-control"
+                    placeholder="Enter Username"
+                    value="<%= typeof name != 'undefined' ? name : '' %>">
+                </div>
+              
               <div class="form-group">
                 <label for="password">Password</label>
                 <input
@@ -66,7 +76,7 @@
                 Register
               </button>
             </form>
-            <p class="lead mt-4">Have An Account? <a href="/users/login">Login</a></p>
+            <p class="lead mt-4">Have An Account? <a href="/login">Login</a></p>
           </div>
         </div>
       </div>
