newProject pushes to database

--- a/views/newProject.ejs
+++ b/views/newProject.ejs
@@ -8,7 +8,7 @@
             </h1>
             <!-- THIS FORM GOES TO USERS AND IT'S GOING TO BE A POST REQUEST 
             -->
-            <form action="/" method="POST">
+            <form action="/feed" method="POST">
                 <div class="form-group">
                     <label for="pName">Project Name</label>
                     <input type="text"
