added authentication and login functions

--- a/views/partials/errorMessages.ejs
+++ b/views/partials/errorMessages.ejs
@@ -1,4 +1,7 @@
-<% if(typeof errors != 'undefined') {
+<!-- BASICALLY IF TYPEOF ERRORS ARE CONSIDERED UNDEFINED THEN THERE IS AN ERROR 
+IF THERE'S AN ERROR, DISPLAY THE ERRORS 
+    LOOPS THROUGH THE ERRORS ARRAY -->
+<% if(typeof(errors) != 'undefined') { %>
     <% errors.forEach(function(error){ %>
         <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <%= error.msg %>
@@ -9,9 +12,9 @@
     <% }); %> 
 <% } %>
 
-<!-- THE WAY THE SUCCESS MSF WORKS IS THAT IF THERE'S NOT STRING THEN IT'S A SUCCESS 
+<!-- THE WAY THE SUCCESS MSG WORKS IS THAT IF THERE'S NOT STRING THEN IT'S A SUCCESS 
 IF SUCCESS MSG ISN'T EQUAL TO AN EMPTY STRING THEN SHOW THE SUCCESS MESSAGE -->
-<% if(success_msg != '') {
+<% if(success_msg != '') { %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
             <%= success.msg %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -21,7 +24,8 @@ IF SUCCESS MSG ISN'T EQUAL TO AN EMPTY STRING THEN SHOW THE SUCCESS MESSAGE -->
 
 <% } %>
 
-<% if(error_msg != '') {
+<!-- THIS IS THE ERROR FOR LOGIN IF EMAIL ISN'T REGISTERED OR FIELDS DO NOT MATCH -->
+<% if(error != '') { %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
             <%= error.msg %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
