--- a/views/ideas.ejs
+++ b/views/ideas.ejs
@@ -43,7 +43,7 @@
                 <div class="card mb-5 mt-2" style="border: none">
                         <a href="/" style="color: black; text-decoration: none">
                         <% if (record.id === 1){ %>
-                            <div style="background-image: linear-gradient(rgb(245, 248, 37), rgb(191, 194, 41)); height:10vh;"></div>
+                            <div class="bg-warning" style="height:10vh;"></div>
                             <% } else if (record.id === 2){%> 
                                 <div style="background-image: linear-gradient(rgb(245, 12, 12), rgb(156, 46, 38)); height:10vh"></div>
                             <% } else if (record.id === 3){%> 
