--- a/views/partials/errorMessages.ejs
+++ b/views/partials/errorMessages.ejs
@@ -16,7 +16,7 @@ IF THERE'S AN ERROR, DISPLAY THE ERRORS
 IF SUCCESS MSG ISN'T EQUAL TO AN EMPTY STRING THEN SHOW THE SUCCESS MESSAGE -->
 <% if(success_msg != '') { %>
     <div class="alert alert-success alert-dismissible fade show" role="alert">
-            <%= success.msg %>
+            <%= success_msg %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
         </button>
