--- a/views/ideas.ejs
+++ b/views/ideas.ejs
@@ -9,13 +9,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   
+<style>
 
+
+
+.card-body {
+    background-color: gray;
+}
+
+
+</style>
 </head>
   <body style="background-color: rgb(73, 72, 72)">
 
         <% include partials/template/header.ejs %>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="border-top: 5px solid black; height: 50px;">
+        <nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black; height: 50px;">
                 
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
@@ -27,9 +36,9 @@
                         Sort By
                       </a>
                       <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
+                            <% industry.forEach(record => { %>
+                            <a class="dropdown-item" id="industry<%=record.id%>"><%=record.industryName%></a>
+                            <% }) %> 
                       </div>
                     </li>
                   </ul>
@@ -39,24 +48,23 @@
     <div class="container-fluid">
         <div class="row">
         <% project.forEach(record => { %>
-            <div class="col-sm-6 col-md-6 col-lg-3">
-                <div class="card mb-5 mt-2" style="border: none">
-                        <a href="/" style="color: black; text-decoration: none">
-                        <% if (record.id === 1){ %>
-                            <div class="bg-warning" style="height:10vh;"></div>
+            <div class="col-sm-6 col-md-6 col-lg-3 test">
+                <div id="carder" class="card mb-5 mt-2" style="border: none">
+                        <a href="/" style="color: black; text-decoration: none;">
+                        <!-- <% if (record.id === 1){ %>
                             <% } else if (record.id === 2){%> 
                                 <div style="background-image: linear-gradient(rgb(245, 12, 12), rgb(156, 46, 38)); height:10vh"></div>
                             <% } else if (record.id === 3){%> 
                                 <div style="background-image: linear-gradient(rgb(67, 3, 243), rgb(24, 20, 80)); height:10vh"></div>
                                 <%} else{ %>
                                     <div style="background-image: linear-gradient(rgb(9, 160, 35), rgb(18, 95, 25)); height:10vh"></div>
-                            <% } %>
-                        <div class="card-body" style="height: 20vh; overflow: scroll;">
+                            <% } %> -->
+                        <div class="card-body carder" style="height: 20vh;">
                         <h5 class="card-title"><%= record.pName %></h5>
                         <p class="card-text"><%= record.summary %></p>
                         </div>
                         <ul class="list-group list-group-flush">
-                        <li class="list-group-item">
+                        <li class="list-group-item cardneed" style="background-color:rgb(253, 244, 231)">
                             <ul>What we need:
                                 <li>developer</li>
                                 <li>marketer</li>
@@ -69,7 +77,8 @@
 
                         </li>
                         </ul>
-                        <div class="card-body" style="background-image: linear-gradient(rgb(189, 196, 189), rgb(209, 221, 209))">
+                        <!-- <div class="card-body" style="background-image: linear-gradient(rgb(189, 196, 189), rgb(209, 221, 209))"> -->
+                        <div class="card-body" style="background-color: gray">
 
                         </div>
 
@@ -87,8 +96,29 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+    
+    <script>
+    $(document).ready(function() {
+        $(".carder").mouseenter(function(){
+            $(this).css("background-color", "yellow");
+            });
+        $(".carder").mouseleave(function(){
+            $(this).css("background-color", "gray");
+            });
+        
+        $(".dropdown-item").click(function() {
+            $(".test").hide()
+        })
+
+
+    });
+
+    </script>
+
+</body>
 </html>
