--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,6 +3,7 @@
         <div class="col-md-6 m-auto">
           <div class="card card-body">
             <h1 class="text-center mb-3"><i class="fas fa-sign-in-alt"></i>  Login</h1>
+            <% include ./partials/errorMessages.ejs %>
             <form action="./login" method="POST">
               <div class="form-group ">
                 <label for="email">Email</label>
@@ -27,7 +28,7 @@
               <button type="submit" class="btn btn-primary btn-block">Login</button>
             </form>
             <p class="lead mt-4">
-              No Account? <a href="register">Register</a>
+              No Account? <a href="/register">Register</a>
             </p>
           </div>
         </div>
