--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,4 +1,5 @@
 <% include partials/template/header.ejs %>
+
 <body>
 <div class="row mt-5">
         <div class="col-md-6 m-auto">
@@ -8,26 +9,27 @@
             </h1>
             <!-- THIS FORM GOES TO USERS AND IT'S GOING TO BE A POST REQUEST 
             -->
+            <% include ./partials/errorMessages.ejs %>
             <form action="/register" method="POST">
-                <div class="form-group">
-                    <label for="username">Username</label>
-                    <input type="username"
-                    id="username"
-                    name="username"
-                    class="form-control"
-                    placeholder="Enter Username"
-                    value="<%= typeof name != 'undefined' ? name : '' %>">
-                </div>
               <div class="form-group">
-                <label for="name">Name</label>
+                <label for="fName">First Name</label>
                 <input
-                  type="name"
-                  id="name"
-                  name="name"
+                  type="fName"
+                  id="fName"
+                  name="fName"
                   class="form-control"
-                  placeholder="Enter Name"
-                  value="<%= typeof name != 'undefined' ? name : '' %>"
-                ><!--IF TYPE OF NAME DOES NOT EQUAL TO UNDEFINE THEN DISPLAY WHATEVER THE NAME VARIABLE IS -->
+                  placeholder="First Name"
+                  value="<%= typeof name != 'undefined' ? name : '' %>">
+                  <!--IF TYPE OF NAME DOES NOT EQUAL TO UNDEFINE THEN DISPLAY WHATEVER THE NAME VARIABLE IS -->
+              </div>
+              <div class="form-group">
+                <label for="lName">Last Name</label>
+                <input type="lName"
+                    id="lName"
+                    name="lName"
+                    class="form-control"
+                    placeholder="Last Name"
+                    value="<%= typeof name != 'undefined' ? name : '' %>">
               </div>
               <div class="form-group">
                 <label for="email">Email</label>
@@ -40,6 +42,16 @@
                   value="<%= typeof email != 'undefined' ? email : '' %>"
                 >
               </div>
+                <div class="form-group">
+                    <label for="username">Username</label>
+                    <input type="username"
+                    id="username"
+                    name="username"
+                    class="form-control"
+                    placeholder="Enter Username"
+                    value="<%= typeof name != 'undefined' ? name : '' %>">
+                </div>
+              
               <div class="form-group">
                 <label for="password">Password</label>
                 <input
@@ -66,7 +78,7 @@
                 Register
               </button>
             </form>
-            <p class="lead mt-4">Have An Account? <a href="login">Login</a></p>
+            <p class="lead mt-4">Have An Account? <a href="/login">Login</a></p>
           </div>
         </div>
       </div>
