--- a/views/ideas.ejs
+++ b/views/ideas.ejs
@@ -24,7 +24,7 @@
 
         <% include partials/template/header.ejs %>
 
-        <nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black; height: 50px;">
+        <nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black;">
                 
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
@@ -41,6 +41,9 @@
                             <% }) %> 
                       </div>
                     </li>
+                    <li class="nav-item" style="margin: 0vw 0vw 0vw 60vw">
+                            <button id="createProjectButton"><a href="/newProject" style="color: black; text-decoration: none">Create Your Own Project</button></a>
+                    </li>
                   </ul>
                 </div>
               </nav>
@@ -50,7 +53,7 @@
         <% project.forEach(record => { %>
             <div class="col-sm-6 col-md-6 col-lg-3 <%=record.industryID%>">
                 <div id="carder" class="card mb-5 mt-2" style="border: none">
-                        <a href="/" style="color: black; text-decoration: none;">
+                        <a href="/ideapage/<%=record.id%>" style="color: black; text-decoration: none;">
                         <!-- <% if (record.id === 1){ %>
                             <% } else if (record.id === 2){%> 
                                 <div style="background-image: linear-gradient(rgb(245, 12, 12), rgb(156, 46, 38)); height:10vh"></div>
@@ -111,6 +114,15 @@
         $(".carder").mouseleave(function(){
             $(this).css("background-color", "gray");
             });
+        $("#createProjectButton").mouseenter(function(){
+            $(this).css("border", "5px solid yellow")
+            });
+        $("#createProjectButton").mouseleave(function(){
+            $(this).css("border", "none")
+            })
+        
+
+        
         
         // var elementClicked;
         // $("#industry1").click(function(){
