--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -27,6 +27,13 @@
                 </div>
                 <div class="w-100"></div>
                 <div class="col" style="background-color: rgb(253, 244, 231); height: 40vh; margin: 0px 5vw 0px 5vw; padding: 5vw;">
+                    <div style="margin: 0% 0% 0% 80%">
+                        
+                        <button>
+                            "Join Our Project!"
+                        </button>
+                    </div>
+                    <br>
                     <h5>About Our Project:</h5>
                     <br>
                         <%=project[0].description%>
@@ -79,6 +86,8 @@
         $("#ideaCard").mouseleave(function(){
             $("#ideaHeader").css("background-color", "gray");
             });
+        
+        
         
 
 
