--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -29,8 +29,8 @@
                 <div class="col" style="background-color: rgb(253, 244, 231); height: 40vh; margin: 0px 5vw 0px 5vw; padding: 5vw;">
                     <div style="margin: 0% 0% 0% 80%">
                         
-                        <button>
-                            "Join Our Project!"
+                        <button id="join">
+                            Join Our Project!
                         </button>
                     </div>
                     <br>
@@ -86,6 +86,10 @@
         $("#ideaCard").mouseleave(function(){
             $("#ideaHeader").css("background-color", "gray");
             });
+        // $("#join").click(function(){
+        //     fetch('/ideaPage/:ideaID')
+        //     .then
+        // })
         
         
         
