--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -87,6 +87,13 @@
         $("#ideaCard").mouseleave(function(){
             $("#ideaHeader").css("background-color", "gray");
             });
+        $(".contributor-box").mouseenter(function(){
+            $(this).css("background-color", "yellow");
+            });
+        $(".contributor-box").mouseleave(function(){
+            $(this).css("background-color", "gray");
+            });
+            
         // $("#join").click(function(){
         //     fetch('/ideaPage/:ideaID')
         //     .then
