--- a/views/ideas.ejs
+++ b/views/ideas.ejs
@@ -15,7 +15,7 @@
 
         <% include partials/template/header.ejs %>
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="border-top: 5px solid black; height: 50px;">
+        <nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black; height: 50px;">
                 
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                   <ul class="navbar-nav">
