--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,27 +1,4 @@
 <% include partials/template/header.ejs %>
-    
-
-
-    <!-- <div class="container-fluid p-0 m-0">
-        <div class="row m-0 bg-light w-100 p-5">
-            <div class="col-12 text-center">
-                <h1 class="font-italic text-center pb-2 size">Inspire & Create</h1>
-            </div>
-            <div class="pt-2 h-100 d-flex">
-                <div class="col-3"></div>
-                <div class="col-6 mb-4 flex-column lead">
-                    Create something great together
-                    Brainstorm and share ideas with others
-                </div>
-                <div class="col-3"></div>
-            </div>
-            <div class="mx-auto">
-                <button type="button" class="btn btn-dark">Let's Create</button>
-            </div>
-        </div>  
-    </div>
-
-    <div ></div> -->
 
 
 
@@ -78,7 +55,7 @@
                 <div class="bg-dark">
                     <div class="container border border-dark bg-light" style="width: 800px;">
                         <div class="d-xs-none d-md-block" style="top: 0px; left: 0px; z-index: 10;">
-                            <iframe class="py-5" width="100%" height="420px" src="home" frameborder="0"></iframe>
+                            <iframe class="py-5" width="100%" height="420px" src="ideas" frameborder="0"></iframe>
                         </div>
                     </div>
                 </div>
