--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -44,22 +44,15 @@
                 <div class="col" style="background-color: rgb(253, 244, 231); margin: 0px 5vw 0px 5vw;">
                     <div style="border: 1px solid black; margin: 5vw; padding: 1vw; border-radius: 25px; text-align: center">
                     Contributors
-                    <% let users = project[0].summary.split(' ')%>
+                    <br>
+                        
+
                     <div class="row">
-                            <% users.forEach(user => { %>
+                            <% user.forEach(element => { %>
                                 <div class="col contributor-box" style="border-radius: 25px; text-align: center; background-color: gray">
-                                    <%=user%>
+                                        <%=element.userID%>
                                     </div>
                             <% }) %>
-                        <!-- <div class="col contributor-box">
-                        <%= users[1]%>
-                        </div>
-                        <div class="col contributor-box">
-                        <%= users[2]%>
-                        </div>
-                        <div class="col contributor-box">
-                        <%= users[3]%>
-                        </div> -->
                     </div>
                     </div>
                 </div>
