--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -48,9 +48,9 @@
                         
 
                     <div class="row">
-                            <% user.forEach(element => { %>
+                            <% collabs.forEach(element => { %>
                                 <div class="col contributor-box" style="border-radius: 25px; text-align: center; background-color: gray">
-                                        <%=element.userID%>
+                                        <%=element%>
                                     </div>
                             <% }) %>
                     </div>
