--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -22,39 +22,31 @@
         <div class="container-fluid">
             <div class="row" id="ideaCard">
                 <div id="ideaHeader" class="col" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
-                    <h2><%=project[0].pName%></h2>
-                    <h5>Industry</h5>
+                    <h2><%=user[0].fName%> <%=user[0].lName%></h2>
+                    <h5><%=user[0].email%></h5>
                 </div>
                 <div class="w-100"></div>
                 <div class="col" style="background-color: rgb(253, 244, 231); height: 40vh; margin: 0px 5vw 0px 5vw; padding: 5vw;">
                     <div style="margin: 0% 0% 0% 80%">
                         
-                        <button id="join">
-                            Join Our Project!
-                        </button>
+
                     </div>
                     <br>
-                    <h5>About Our Project:</h5>
+                    <h5>About Me:</h5>
                     <br>
-                        <%=project[0].description%>
+                        <%=user[0].bio%>
 
                     
                 </div>
                 <div class="w-100"></div>
                 <div class="col" style="background-color: rgb(253, 244, 231); margin: 0px 5vw 0px 5vw;">
                     <div style="border: 1px solid black; margin: 5vw; padding: 1vw; border-radius: 25px; text-align: center">
-                    Contributors
+                    Social Media
                     <br>
                         
 
                     <div class="row">
-                            <% userProj.forEach(element => { %>
-                                <a href="/userProfile/<%=element.userID%>" style="color: black; text-decoration: none;">
-                                <div class="col contributor-box" style="border-radius: 25px; text-align: center; background-color: gray">
-                                        <%=element.userID%></a>
-                                    </div>
-                               
-                            <% }) %>
+                        social media buttons
                     </div>
                     </div>
                 </div>
