--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
             <div class="header position-relative">
                 <div class="position-absolute w-100 h-100" style="top: 0px; left: 0px; z-index: 15; text-align: center">
                     <div class="d-flex flex-column w-100 h-100 justify-content-around align-items-center">
-                        <div class="display-1 text-white d-none d-md-block">
+                        <div class="display-1 text-white d-none d-md-block indieFont">
                                 the lightbulb project
-                            <div class="display-4  text-warning">
+                            <div class="display-4  text-warning indieFont">
                                 create something together
                             </div>
                         </div>
@@ -97,12 +97,6 @@
     
             </main>
         </div>
-
-
-
-
-
-
 
 
 
