--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
                   placeholder="Enter Password"
                 />
               </div>
-              <button type="submit" class="btn btn-primary btn-block">Login</button>
+              <button type="submit" class="btn btn-dark btn-block btnLightUp">Login</button>
             </form>
             <p class="lead mt-4">
               No Account? <a href="/register">Register</a>
