--- a/views/newProject.ejs
+++ b/views/newProject.ejs
@@ -47,7 +47,7 @@
                     placeholder="Two words Summary"
                     value="<%= typeof summary != 'undefined' ? summary : '' %>">
                 </div>
-              <button type="submit" class="btn btn-primary btn-block">
+              <button type="submit" class="btn btn-dark btn-block btnLightUp">
                 Create Project
               </button>
             </form>
