--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,11 +1,11 @@
 <% include partials/template/header.ejs %>
 
-<body>
+
 <div class="row mt-5">
         <div class="col-md-6 m-auto">
           <div class="card card-body">
             <h1 class="text-center mb-3">
-              <i class="fas fa-user-plus"></i> Register
+              Register
             </h1>
             <!-- THIS FORM GOES TO USERS AND IT'S GOING TO BE A POST REQUEST 
             -->
@@ -74,7 +74,7 @@
                   value="<%= typeof password2 != 'undefined' ? password2 : '' %>"
                 >
               </div>
-              <button type="submit" class="btn btn-primary btn-block">
+              <button type="submit" class="btn btn-dark btn-block btnLightUp">
                 Register
               </button>
             </form>
