moving create project button

--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -20,8 +20,8 @@
   <body style="background-color: rgb(73, 72, 72)">
         <% include partials/template/header.ejs %>
         <div class="container-fluid">
-            <div class="row" id="ideaCard">
-                <div id="ideaHeader" class="col" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
+            <div class="row" id="">
+                <div id="ideaHeader" class="col lightup" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
                     <h2><%=project[0].pName%></h2>
                     <h5>Industry</h5>
                 </div>
@@ -29,7 +29,7 @@
                 <div class="col" style="background-color: rgb(253, 244, 231); height: 40vh; margin: 0px 5vw 0px 5vw; padding: 5vw;">
                     <div style="margin: 0% 0% 0% 80%">
                         
-                        <button id="join">
+                        <button id="join" class="btn btn-dark btnLightUp ">
                             Join Our Project!
                         </button>
                     </div>
