--- a/views/ideas2.ejs
+++ b/views/ideas2.ejs
@@ -1,11 +1,35 @@
 <% include partials/template/header.ejs %>
 
-<div class="container-fluid">
+<nav class="navbar navbar-expand navbar-dark bg-dark" style="border-top: 5px solid black;">
+                
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#">Filter</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Sort By
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <% industry.forEach(record => { %>
+                    <a class="dropdown-item" id="industry<%=record.id%>"><%=record.industryName%></a>
+                    <% }) %> 
+              </div>
+            </li>
+            <li class="nav-item navbar-right" style="margin: 0vw 5vw 0vw 60vw" >
+                    <button class="btn btn-secondary btn-block btnLightUp" id="createProjectButton"><a href="/newProject" class="text-light">Share Your Idea!</button></a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+<div class="container-fluid bg-secondary">
     <div class="row">
     <% project.forEach(record => { %>
     <div class="col-sm-6 col-md-6 col-lg-3 test">
         <div id="carder" class="card mb-5 mt-2 cardLightUp">
-            <a href="#" style="color: black; text-decoration: none;">
+            <a href="/ideapage/<%=record.id%>" style="color: black; text-decoration: none;">
                 <div class="card-body carder" style="height: 20vh;">
                     <h5 class="card-title"><%= record.pName %></h5>
                     <p class="card-text"><%= record.summary %></p>
