--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,7 @@
                 <div class="bg-dark">
                     <div class="container border border-dark bg-light" style="width: 800px;">
                         <div class="d-xs-none d-md-block" style="top: 0px; left: 0px; z-index: 10;">
-                            <iframe class="py-5" width="100%" height="420px" src="ideas" frameborder="0"></iframe>
+                            <!-- <iframe class="py-5" width="100%" height="420px" src="ideas" frameborder="0"></iframe> -->
                         </div>
                     </div>
                 </div>
