--- a/views/newProject.ejs
+++ b/views/newProject.ejs
@@ -4,7 +4,7 @@
         <div class="col-md-6 m-auto">
           <div class="card card-body">
             <h1 class="text-center mb-3">
-              <i class="fas fa-user-plus"></i> Create New Project
+              Create New Project
             </h1>
             <!-- THIS FORM GOES TO USERS AND IT'S GOING TO BE A POST REQUEST 
             -->
