--- a/views/partials/template/header.ejs
+++ b/views/partials/template/header.ejs
@@ -28,6 +28,9 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="nav navbar-nav navbar-right ml-auto mt-2 mt-lg-0">
               <!-- <li><p class="navbar-text">Already have an account?</p></li> -->
+              <li class="nav-item navbar-right mr-3" >
+                  <button class="btn btn-secondary btn-block btnLightUp" id="createProjectButton"><a href="/newProject" class="text-light">Share Your Idea!</button></a>
+              </li> 
               <li class="dropdown">
                   <button type="button" class="btn btn-secondary dropdown-toggle btnLightUp" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                       Login
@@ -36,7 +39,7 @@
                       <li>
                           <div class="row">
                               <div class="col-md-12">
-                                  <form class="form" role="form" method="post" action="dashboard" accept-charset="UTF-8" id="login-nav">
+                                  <form class="form" role="form" method="post" action="./login" accept-charset="UTF-8" id="login-nav">
                                       <div class="form-group">
                                               <label class="sr-only" for="email">Email address</label>
                                               <input
