--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -22,8 +22,7 @@
         <div class="container-fluid">
             <div class="row" id="ideaCard">
                 <div id="ideaHeader" class="col" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
-                    <h2><%=project[0].pName%></h2>
-                    <h5>Industry</h5>
+                    <h2><%=project.pName%></h2>
                 </div>
                 <div class="w-100"></div>
                 <div class="col" style="background-color: rgb(253, 244, 231); height: 40vh; margin: 0px 5vw 0px 5vw; padding: 5vw;">
@@ -36,7 +35,7 @@
                     <br>
                     <h5>About Our Project:</h5>
                     <br>
-                        <%=project[0].description%>
+                        <%=project.description%>
 
                     
                 </div>
@@ -48,12 +47,11 @@
                         
 
                     <div class="row">
-                            <% userProj.forEach(element => { %>
-                                <a href="/userProfile/<%=element.userID%>" style="color: black; text-decoration: none;">
+                            <% userNames.forEach(element => { %>
+                                <a href="/userProfile/" style="color: black; text-decoration: none;">
                                 <div class="col contributor-box" style="border-radius: 25px; text-align: center; background-color: gray">
-                                        <%=element.userID%></a>
-                                    </div>
-                               
+                                        <%=element%></a>
+                                </div>
                             <% }) %>
                     </div>
                     </div>
