ideas2 and index

--- a/views/ideas2.ejs
+++ b/views/ideas2.ejs
@@ -17,9 +17,7 @@
                     <% }) %> 
               </div>
             </li>
-            <li class="nav-item navbar-right" style="margin: 0vw 5vw 0vw 60vw" >
-                    <button class="btn btn-secondary btn-block btnLightUp" id="createProjectButton"><a href="/newProject" class="text-light">Share Your Idea!</button></a>
-            </li>
+
           </ul>
         </div>
       </nav>
@@ -36,7 +34,7 @@
                 </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item cardneed" style="background-color:rgb(253, 244, 231)">
-                            <ul>Skills needed:
+                            <!-- <ul>Skills needed: -->
                             </ul>
                         </li>
                     </ul>
