--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,15 +40,15 @@
                                 <!-- <h1 class="display-4 font-italic text-center pb-2 d-none d-md-block">~Great Taste, Good Times~</h1> -->
                             </div>
                             <div class="mx-auto text-dark pt-2 h-100 d-flex ">
-                                <div class="col-2"></div>
-                                <div class="col-8 mb-4 flex-column lead text-center">
-                                        Create something great together
+                                <div class="col-1"></div>
+                                <div class="col-10 mb-4 flex-column lead text-center">
+                                        Create something great together<br>
                                         Brainstorm and share ideas with others
                                 </div>
-                                <div class="col-2"></div>
+                                <div class="col-1"></div>
                             </div>
                             <div class="mx-auto col-12 text-center">
-                                <a role="button" href="register" class="btn btn-warning">Get Started</a>
+                                <a role="button" href="ideas" class="btn btn-warning btnLightUp">Browse Ideas</a>
                             </div>
                         </div>
 
