--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -20,8 +20,8 @@
   <body style="background-color: rgb(73, 72, 72)">
         <% include partials/template/header.ejs %>
         <div class="container-fluid">
-            <div class="row" id="ideaCard">
-                <div id="ideaHeader" class="col" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
+            <div class="row">
+                <div id="ideaHeader" class="col lightup" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
                     <h2><%=project.pName%></h2>
                 </div>
                 <div class="w-100"></div>
