--- a/views/ideaPage.ejs
+++ b/views/ideaPage.ejs
@@ -46,13 +46,13 @@
                     <br>
                         
 
+
+
                     <div class="row">
-                            <% userNames.forEach(element => { %>
-                                <% userIds.forEach(id => { %>
-                                    <a href="/userProfile/<%=id%>" style="color: black; text-decoration: none;">
-                                <% }) %> 
+                            <% userIds.forEach(element => { %>
+                                    <a href="/userProfile/<%=element.id%>" style="color: black; text-decoration: none;">
                                 <div class="col contributor-box" style="border-radius: 25px; text-align: center; background-color: gray">
-                                        <%=element%></a>
+                                        <%=element.fName%></a>
                                 </div>
                             <% }) %>
                     </div>
