--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
                 <div class="position-absolute w-100 h-100" style="top: 0px; left: 0px; z-index: 15; text-align: center">
                     <div class="d-flex flex-column w-100 h-100 justify-content-around align-items-center">
                         <div class="display-1 text-white d-none d-md-block indieFont">
-                                the lightbulb project
+                                Lightbulb
                             <div class="display-4  text-warning indieFont">
                                 create something together
                             </div>
@@ -15,7 +15,7 @@
     
                         <div class="display-3 text-white d-md-none">
                             <div>
-                                the lightbulb project
+                                Lightbulb
                             </div>
     
                             <div class="display-4 text-warning">
