--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -21,7 +21,7 @@
         <% include partials/template/header.ejs %>
         <div class="container-fluid">
             <div class="row" id="ideaCard">
-                <div id="ideaHeader" class="col" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
+                <div id="ideaHeader" class="col lightup" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
                     <h2><%=user[0].fName%> <%=user[0].lName%></h2>
                     <h5><%=user[0].email%></h5>
                 </div>
