--- a/views/partials/template/header.ejs
+++ b/views/partials/template/header.ejs
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>the lightbulb project</title>
+    <title>Lightbulb</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
