--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -20,7 +20,7 @@
   <body style="background-color: rgb(73, 72, 72)">
         <% include partials/template/header.ejs %>
         <div class="container-fluid">
-            <div class="row" id="ideaCard">
+            <div class="row">
                 <div id="ideaHeader" class="col lightup" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
                     <h2><%=user[0].fName%> <%=user[0].lName%></h2>
                     <h5><%=user[0].email%></h5>
