Logout works across the board

--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -22,8 +22,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="ideaHeader" class="col lightup" style="background-color: gray; margin: 5vh 5vw 0px 5vw;">
-                    <h2><%=user[0].fName%> <%=user[0].lName%></h2>
-                    <h5><%=user[0].email%></h5>
+                    <h2><%=users[0].fName%> <%=users[0].lName%></h2>
+                    <h5><%=users[0].email%></h5>
                 </div>
                 <div class="w-100"></div>
                 <div class="col" style="background-color: rgb(253, 244, 231); height: 40vh; margin: 0px 5vw 0px 5vw; padding: 5vw;">
@@ -34,7 +34,7 @@
                     <br>
                     <h5>About Me:</h5>
                     <br>
-                        <%=user[0].bio%>
+                        <%=users[0].bio%>
 
                     
                 </div>
